Add getEmbedding